# fatcat_finance

./: .gitignore  README.md  fatcat.html  pyproject.toml  requirements.txt
app/: __init__.py  category_utils.py  db.py  db_migrate.py  form_dates.py  main.py  models.py  seed.py  templates.py
app/routes/: cards.py  categories.py  common.py  dashboard.py  expenses.py  income.py  pix.py  settings.py  subscriptions.py
app/services/: bills.py  finance.py
app/static/css/: styles.css
app/static/js/: charts.js  ui.js
app/templates/: base.html
app/templates/pages/: cards.html  categories.html  dashboard.html  expenses.html  income.html  pix.html  subscriptions.html
app/templates/partials/: bill_history.html  card_form.html  cards_table.html  categories_table.html  category_field.html  expense_form.html  expenses_table.html  income_form.html  income_table.html  pay_button.html  pix_form.html  pix_table.html  subscription_form.html  subscriptions_table.html
docs/: architecture_guide.md  parity_checklist.md
tests/: test_bills.py  test_finance.py  test_routes.py
